refactor: Changed scatter keyword names to specify previous or current data points.

--- a/example/cycle/cycle_results_plots.ipynb
+++ b/example/cycle/cycle_results_plots.ipynb
@@ -182,15 +182,27 @@
     "fig = plot_results_panel_2d(cycle,\n",
     "                      wrap=3,\n",
     "                      subplot_kw=dict(figsize=(10,5)),  # Panel configurations\n",
-    "                      scatter_kw1=dict(color='rebeccapurple', marker='o', s=10),  # Previous data point\n",
-    "                      scatter_kw2=dict(color='limegreen', marker='^', s=50, alpha=1),  # Current cycle data\n",
-    "                      line_kw=dict(color='magenta', ls='--', lw=2, zorder=0),  # Theory line\n",
+    "                      scatter_previous_kw=dict(color='rebeccapurple', marker='o', s=10),  # Previous data point\n",
+    "                      scatter_current_kw=dict(color='limegreen', marker='^', s=50, alpha=1),  # Current cycle data\n",
+    "                      plot_theory_kw=dict(color='magenta', ls='--', lw=2, zorder=0),  # Theory line\n",
     "                      );"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Saving the figure to an object (above) will allow you to cycle through the axes to make panel-specific edits."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -331,8 +343,8 @@
     "fig = plot_results_panel_3d(cycle_mlr,\n",
     "                            wrap=3,\n",
     "                            subplot_kw=dict(figsize=(12,6)),  # Panel configurations\n",
-    "                            scatter_kw1=dict(color='rebeccapurple', marker='o', s=10),  # Previous data point\n",
-    "                            scatter_kw2=dict(color='limegreen', marker='^', s=10, alpha=1),  # Current cycle data\n",
+    "                            scatter_previous_kw=dict(color='rebeccapurple', marker='o', s=10),  # Previous data point\n",
+    "                            scatter_current_kw=dict(color='limegreen', marker='^', s=10, alpha=1),  # Current cycle data\n",
     "                            surface_kw=dict(color='orange'),  # Theory surface\n",
     "                            );\n"
    ],
@@ -370,8 +382,8 @@
     "fig = plot_results_panel_3d(cycle_mlr,\n",
     "                            wrap=3,\n",
     "                            subplot_kw=dict(figsize=(12,6)),  # Panel configurations\n",
-    "                            scatter_kw1=dict(color='rebeccapurple', marker='o', s=10),  # Previous data point\n",
-    "                            scatter_kw2=dict(color='limegreen', marker='^', s=10, alpha=1),  # Current cycle data\n",
+    "                            scatter_previous_kw=dict(color='rebeccapurple', marker='o', s=10),  # Previous data point\n",
+    "                            scatter_current_kw=dict(color='limegreen', marker='^', s=10, alpha=1),  # Current cycle data\n",
     "                            surface_kw=dict(color='orange'),  # Theory surface\n",
     "                            view=(0, 0),  # Degrees (elevation, azimuth)\n",
     "                            );"
@@ -392,8 +404,8 @@
     "fig = plot_results_panel_3d(cycle_mlr,\n",
     "                            wrap=3,\n",
     "                            subplot_kw=dict(figsize=(12,6)),  # Panel configurations\n",
-    "                            scatter_kw1=dict(color='rebeccapurple', marker='o', s=10),  # Previous data point\n",
-    "                            scatter_kw2=dict(color='limegreen', marker='^', s=10, alpha=1),  # Current cycle data\n",
+    "                            scatter_previous_kw=dict(color='rebeccapurple', marker='o', s=10),  # Previous data point\n",
+    "                            scatter_current_kw=dict(color='limegreen', marker='^', s=10, alpha=1),  # Current cycle data\n",
     "                            surface_kw=dict(color='orange'),  # Theory surface\n",
     "                            view=(20, 60),  # Degrees (elevation, azimuth)\n",
     "                            );\n"
