Update import statements

--- a/example/cycle/cycle_results_plots.ipynb
+++ b/example/cycle/cycle_results_plots.ipynb
@@ -26,7 +26,7 @@
     "from autora.variable import VariableCollection, Variable\n",
     "from autora.cycle import Cycle, plot_results_panel_2d, plot_results_panel_3d\n",
     "from autora.experimentalist.pipeline import Pipeline\n",
-    "from autora.experimentalist.pool import grid_pool\n",
+    "from autora.experimentalist.pooler.general_pool import grid_pool\n",
     "from autora.experimentalist.sampler import random_sampler\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import numpy as np\n",
