docs: Updated cycle_scoring notebook.

--- a/example/cycle/cycle_scoring.ipynb
+++ b/example/cycle/cycle_scoring.ipynb
@@ -92,7 +92,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<autora.cycle.simple.SimpleCycle at 0x16abeed30>"
+      "text/plain": "<autora.cycle.simple.SimpleCycle at 0x1393e0970>"
      },
      "execution_count": 3,
      "metadata": {},
@@ -190,23 +190,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Default scorer: [0.74, 0.8, 0.84, 0.86, 0.88, 0.84, 0.84, 0.84, 0.92, 0.94, 0.9, 0.92, 0.96, 0.96, 0.96, 0.96, 0.96, 0.98, 0.96, 0.96]\n",
+      "Default scorer - accuracy: [0.74, 0.8, 0.84, 0.86, 0.88, 0.84, 0.84, 0.84, 0.92, 0.94, 0.9, 0.92, 0.96, 0.96, 0.96, 0.96, 0.96, 0.98, 0.96, 0.96]\n",
       "\n",
-      "Specified scorer1: [0.74, 0.8, 0.84, 0.86, 0.88, 0.84, 0.84, 0.84, 0.92, 0.94, 0.9, 0.92, 0.96, 0.96, 0.96, 0.96, 0.96, 0.98, 0.96, 0.96]\n",
+      "Specified scorer - accuracy: [0.74, 0.8, 0.84, 0.86, 0.88, 0.84, 0.84, 0.84, 0.92, 0.94, 0.9, 0.92, 0.96, 0.96, 0.96, 0.96, 0.96, 0.98, 0.96, 0.96]\n",
       "\n",
-      "Specified scorer2: [0.7716666666666667, 0.8151111111111112, 0.8454411764705883, 0.8701470588235294, 0.896888888888889, 0.8727692307692309, 0.8727692307692309, 0.856, 0.9251470588235294, 0.9415555555555555, 0.9103676470588234, 0.9251470588235294, 0.96, 0.96, 0.96, 0.96, 0.96, 0.981, 0.96, 0.96]\n"
+      "Specified scorer - precision: [0.77, 0.82, 0.85, 0.87, 0.9, 0.87, 0.87, 0.86, 0.93, 0.94, 0.91, 0.93, 0.96, 0.96, 0.96, 0.96, 0.96, 0.98, 0.96, 0.96]\n"
      ]
     }
    ],
    "source": [
     "results_default = cycle_default_score(cycle, X_test, y_test)\n",
-    "print(f'Default scorer: {results_default}\\n')\n",
+    "print(f'Default scorer - accuracy: {results_default}\\n')\n",
     "\n",
     "results_specified_accuracy = cycle_specified_score(accuracy_score, cycle, X_test, y_test)\n",
-    "print(f'Specified scorer1: {results_specified_accuracy}\\n')\n",
+    "print(f'Specified scorer - accuracy: {results_specified_accuracy}\\n')\n",
     "\n",
     "results_specified_precision = cycle_specified_score(precision_score, cycle, X_test, y_test, average='weighted', zero_division=0)\n",
-    "print(f'Specified scorer2: {results_specified_precision}')"
+    "print(f'Specified scorer - precision: {np.around(results_specified_precision, 2).tolist()}')"
    ],
    "metadata": {
     "collapsed": false,
@@ -391,13 +391,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0.5, 1.0, 'Accuracy Over 20 Cycles')"
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
