docs: partial update to online documentation

--- a/docs/bsr.ipynb
+++ b/docs/bsr.ipynb
@@ -7,12 +7,12 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "Symbolic regression (SR) refers to a class of algorithms that search for interpretable symbolic expressions which capture relationships within data. More specifically, SR attempts to find compositions of simple functions that accurately map independent variables to dependent variables within a given dataset. Bayesian Symbolic Regression, proposed by [Jin et. al (2019)](https://arxiv.org/abs/1910.08892), is a specific SR method that uses a Bayesian framework to search for concise and interpretable expressions. The following are its main contributions, in sequential order:\n",
+    "Symbolic regression (SR) refers to a class of algorithms that search for interpretable symbolic expressions which capture relationships within data. More specifically, SR attempts to find compositions of simple functions that accurately map independent variables to dependent variables within a given dataset. Bayesian Symbolic Regression, proposed by [Jin et. al (2019)](https://arxiv.org/abs/1910.08892), is a specific SR method that uses a Bayesian framework to search for concise and interpretable expressions. The following are its main contributions, listed in sequential order:\n",
     "\n",
-    "1. It models equations as expression trees -- with root and intermediate tree nodes representing operators (e.g. `*` for a binary node and `sin` for a unary node) and leaf nodes representing features in the data. BSR then defines the search space as the union of these three parts:\n",
-    "    - Tree structure (T): this represents the structure of the expression tree (e.g. how to recursively construct the tree and when to stop by using leaf nodes). It also specifies the assignment of operators to non-leaf nodes.\n",
-    "    - Leaf nodes (M): this part assigns features to leaf nodes that are already defined from part **T**.\n",
-    "    - Operator parameters ($\\Theta$): certain operators have additional parameters (e.g. a linear operator `ln` with intercept and slope params). BSR collects these parameters together in a vector $\\Theta$.\n",
+    "1. It models equations as expression trees, with root and intermediate tree nodes representing operators (e.g. `*` for a binary node and `sin` for a unary node) and leaf nodes representing features in the data. BSR then defines the search space as the union of the following three parts:\n",
+    "    - Tree structure (T): this represents the structure of the expression tree (e.g. how to recursively construct the tree and when to stop by using leaf nodes), and also specifies the assignment of operators to non-leaf nodes.\n",
+    "    - Leaf nodes (M): this assigns features to leaf nodes that are already defined from part **T**.\n",
+    "    - Operator parameters ($\\Theta$): this uses a vector $\\Theta$ to collect additional parameters for certain operators which require them (e.g. a linear operator `ln` with intercept and slope params).\n",
     "\n",
     "2. It specifies priors for each of the three parts above. In `Autora`'s implementation of BSR, you are able to specify your own prior for part `T`, or choose among the pre-specified priors.\n",
     "\n",
