docs: partial update to online documentation

--- a/docs/bsr.ipynb
+++ b/docs/bsr.ipynb
@@ -14,7 +14,7 @@
     "    - Leaf nodes (M): this assigns features to leaf nodes that are already defined from part **T**.\n",
     "    - Operator parameters ($\\Theta$): this uses a vector $\\Theta$ to collect additional parameters for certain operators which require them (e.g. a linear operator `ln` with intercept and slope params).\n",
     "\n",
-    "2. It specifies priors for each of the three parts above. In `Autora`'s implementation of BSR, you are able to specify your own prior for part `T`, or choose among the pre-specified priors.\n",
+    "2. It specifies priors for each of the three parts above. `Autora`'s implementation of BSR allows users to either specify custom priors for part `T` or choose among a pre-specified set.\n",
     "\n",
     "3. It defines the `actions` that mutate one expression tree (`original`) into a new expression tree (`proposed`), and supports the calculation of transition probabilities based on the likelihoods of `original` and `proposed` models.\n",
     "\n",
