docs: partial update to online documentation

--- a/docs/bsr.ipynb
+++ b/docs/bsr.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "2. It specifies priors for each of the three parts above. `Autora`'s implementation of BSR allows users to either specify custom priors for part `T` or choose among a pre-specified set.\n",
     "\n",
-    "3. It defines the `actions` that mutate one expression tree (`original`) into a new expression tree (`proposed`), and supports the calculation of transition probabilities based on the likelihoods of `original` and `proposed` models.\n",
+    "3. It defines `actions` that mutate one expression tree (`original`) into a new expression tree (`proposed`), and supports the calculation of transition probabilities based on the likelihoods of the `original` and `proposed` models.\n",
     "\n",
     "4. It designs and implements a Reversible-Jump Markov-Chain Monte-Carlo (RJ-MCMC) algorithm that iteratively accepts new samples (each sample being a valid expression tree) based on the transition probabilities calculated above. In each iteration, `K` expression trees are obtained either from the `original` samples or the newly `proposed` samples.\n",
     "\n",
