docs: partial update to online documentation

--- a/docs/bsr.ipynb
+++ b/docs/bsr.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "- **\\+**: The output of the computation $x_j$ is the sum over its inputs $x_i, x_{ii}$: $x_j = x_i + x_{ii}$.\n",
     "- **\\-**: The output of the computation $x_j$ is the respective difference between its inputs $x_i, x_{ii}$: $x_j = x_i - x_{ii}$.\n",
-    "- **{\\*}**: The output of the computation $x_j$ is the product over its two inputs $x_i, x_{ii}$: $x_j = x_i {*} x_{ii}$.\n",
+    "- __\\*__: The output of the computation $x_j$ is the product over its two inputs $x_i, x_{ii}$: $x_j = x_i * x_{ii}$.\n",
     "- **exp**: The output of the computation $x_j$ is the natural exponential function applied to its input $x_i$: $x_j = \\exp(x_i)$.\n",
     "- **pow2**: The output of the computation $x_j$ is the square function applied to its input $x_i$: $x_j$ = $x_i^2$.\n",
     "- **pow3**: The output of the computation $x_j$ is the cube function applied to its input $x_i$: $x_j$ = $x_i^3$.\n",
