docs: partial update to online documentation

--- a/docs/bsr.ipynb
+++ b/docs/bsr.ipynb
@@ -45,7 +45,7 @@
     "- **pow3**: The output of the computation $x_j$ is the cube function applied to its input $x_i$: $x_j$ = $x_i^3$.\n",
     "- **sin**: The output of the computation $x_j$ is the sine function applied to its input $x_i$: $x_j = \\sin(x_i)$.\n",
     "- **cos**: The output of the computation $x_j$ is the cosine function applied to its input $x_i$: $x_j = \\cos(x_i)$.\n",
-    "- **ln**: The output of the computation $x_j$ is the linear transformation applied to its input $x_i$: $x_j = a * x_i + b$. $a$ and $b$ are the slope and intercept parameters associated with the operator.\n",
+    "- **ln**: The output of the computation $x_j$ is the linear transformation applied to its input $x_i$: $x_j = a * x_i + b$, where $a$ and $b$ are slope and intercept parameters.\n",
     "\n",
     "In BSR, it's easy to add a new operator by following two steps. First, define an operator as a function, as demonstrated in `operations.py`. Second, add the name of the operator and its prior information to the dictionaries in `__get_prior()` within `prior.py`.\n",
     "\n",
