--- a/docs/bsr.ipynb
+++ b/docs/bsr.ipynb
@@ -47,7 +47,7 @@
     "- **cos**: The output of the computation $x_j$ is the cosine function applied to its input $x_i$: $x_j = \\cos(x_i)$.\n",
     "- **ln**: The output of the computation $x_j$ is the linear transformation applied to its input $x_i$: $x_j = a * x_i + b$, where $a$ and $b$ are slope and intercept parameters.\n",
     "\n",
-    "In BSR, it's easy to add a new operator by following two steps. First, define an operator as a function, as demonstrated in `operations.py`. Second, add the name of the operator and its prior information to the dictionaries in `__get_prior()` within `prior.py`.\n",
+    "In BSR, a new operator can be added in two steps. First, define an operator as a function, as demonstrated in `operations.py`. Second, add the name of the operator and its prior information to the dictionaries in `__get_prior()` within `prior.py`.\n",
     "\n",
     "## Examples\n",
     "\n",
