docs: partial update to online documentation

--- a/docs/bsr.ipynb
+++ b/docs/bsr.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "## Examples\n",
     "\n",
-    "The following toy example shows out-of-the-box functionality of BSR. It first generates data using the equation $y = \\sin(x) + x^3$ as ground-truth, and then fits the data with default meta-parameters. For ease and efficiency of illustration, it applies a small number of iterations, `itr_num`. As displayed in the plot below, the algorithm provides results that are not only reasonable, but exactly match the ground-truth equation."
+    "The following toy example shows out-of-the-box functionality of BSR. It first generates data using the equation, $y = \\sin(x) + x^3$, as ground-truth, and then fits the data with default meta-parameters. For ease and efficiency of illustration, it applies a small number of iterations, `itr_num`. As displayed in the plot below, the algorithm provides results that are not only reasonable, but exactly match the ground-truth equation."
    ],
    "metadata": {
     "collapsed": false
