test: update code in example file

--- a/example/cycle/cycle_saving_and_restarting.ipynb
+++ b/example/cycle/cycle_saving_and_restarting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "def ground_truth(x):\n",
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "array([1.04339546])"
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "\n",
@@ -76,9 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "outputs": [],
    "source": [
+    "from autora.cycle.result.serializer.yaml_ import YAMLResultCollectionSerializer\n",
     "import pathlib\n",
     "\n",
     "cycle = FilesystemCycle(\n",
@@ -87,7 +88,7 @@
     "    experimentalist=example_experimentalist,\n",
     "    experiment_runner=example_synthetic_experiment_runner,\n",
     "    monitor=lambda data: print(f\"Generated {len(data)}-th datum, a new {data[-1].kind}\"),\n",
-    "    path=pathlib.Path(\"./saving_restarting\")\n",
+    "    serializer=YAMLResultCollectionSerializer(pathlib.Path(\"./saving_restarting\"))\n",
     ")\n",
     "\n",
     "\n"
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -118,9 +119,9 @@
     },
     {
      "data": {
-      "text/plain": "<autora.cycle.filesystem.FilesystemCycle at 0x28530af10>"
+      "text/plain": "<autora.cycle.filesystem.FilesystemCycle at 0x17c494340>"
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,56 +135,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "PosixPath('/Users/jholla10/Developer/autora/example/cycle/saving_restarting')"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cycle.path.resolve()\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated 21-th datum, a new THEORY\n",
-      "Generated 22-th datum, a new CONDITION\n",
-      "Generated 23-th datum, a new OBSERVATION\n",
-      "Generated 24-th datum, a new THEORY\n",
-      "Generated 25-th datum, a new CONDITION\n",
-      "Generated 26-th datum, a new OBSERVATION\n",
-      "Generated 27-th datum, a new THEORY\n",
-      "Generated 28-th datum, a new CONDITION\n",
-      "Generated 29-th datum, a new OBSERVATION\n",
-      "Generated 30-th datum, a new THEORY\n"
+      "Generated 11-th datum, a new OBSERVATION\n",
+      "Generated 12-th datum, a new THEORY\n",
+      "Generated 13-th datum, a new CONDITION\n",
+      "Generated 14-th datum, a new OBSERVATION\n",
+      "Generated 15-th datum, a new THEORY\n",
+      "Generated 16-th datum, a new CONDITION\n",
+      "Generated 17-th datum, a new OBSERVATION\n",
+      "Generated 18-th datum, a new THEORY\n",
+      "Generated 19-th datum, a new CONDITION\n",
+      "Generated 20-th datum, a new OBSERVATION\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<autora.cycle.filesystem.FilesystemCycle at 0x28530ac10>"
+      "text/plain": "<autora.cycle.filesystem.FilesystemCycle at 0x17c63e070>"
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "new_cycle = FilesystemCycle(\n",
-    "    data = pathlib.Path(\"./saving_restarting\"),\n",
+    "    state = YAMLResultCollectionSerializer(pathlib.Path(\"./saving_restarting\")),\n",
     "    theorist=example_theorist,\n",
     "    experimentalist=example_experimentalist,\n",
     "    experiment_runner=example_synthetic_experiment_runner,\n",
@@ -196,11 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "outputs": [],
    "source": [
-    "new_cycle.dump(pathlib.Path(\"./saving_restarting\"))\n"
+    "new_cycle.serializer = YAMLResultCollectionSerializer(pathlib.Path(\"./saving_restarting\"))\n",
+    "new_cycle.dump()\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
