docs: update notebook

--- a/example/cycle/cycle_saving_and_restarting.ipynb
+++ b/example/cycle/cycle_saving_and_restarting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def ground_truth(x):\n",
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "array([1.04339546])"
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "\n",
@@ -76,9 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "outputs": [],
    "source": [
+    "from autora.cycle.planner import random_operation_planner\n",
     "from autora.cycle.result.serializer.yaml_ import YAMLResultCollectionSerializer\n",
     "import pathlib\n",
     "\n",
@@ -88,7 +89,8 @@
     "    experimentalist=example_experimentalist,\n",
     "    experiment_runner=example_synthetic_experiment_runner,\n",
     "    monitor=lambda data: print(f\"Generated {len(data)}-th datum, a new {data[-1].kind}\"),\n",
-    "    serializer=YAMLResultCollectionSerializer(pathlib.Path(\"./saving_restarting\"))\n",
+    "    serializer=YAMLResultCollectionSerializer(pathlib.Path(\"./saving_restarting\")),\n",
+    "    planner=random_operation_planner,\n",
     ")\n",
     "\n",
     "\n"
@@ -99,35 +101,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Generated 1-th datum, a new CONDITION\n",
-      "Generated 2-th datum, a new OBSERVATION\n",
-      "Generated 3-th datum, a new THEORY\n",
-      "Generated 4-th datum, a new CONDITION\n",
+      "Generated 2-th datum, a new CONDITION\n",
+      "Generated 3-th datum, a new OBSERVATION\n",
+      "Generated 4-th datum, a new THEORY\n",
       "Generated 5-th datum, a new OBSERVATION\n",
-      "Generated 6-th datum, a new THEORY\n",
-      "Generated 7-th datum, a new CONDITION\n",
-      "Generated 8-th datum, a new OBSERVATION\n",
-      "Generated 9-th datum, a new THEORY\n",
-      "Generated 10-th datum, a new CONDITION\n"
+      "Generated 6-th datum, a new CONDITION\n",
+      "Generated 7-th datum, a new THEORY\n",
+      "Generated 8-th datum, a new THEORY\n",
+      "Generated 9-th datum, a new CONDITION\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "<autora.cycle.filesystem.FilesystemCycle at 0x17c494340>"
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "cycle.run(10)\n"
+    "for i in range(10):\n",
+    "    try:\n",
+    "        next(cycle)\n",
+    "    except (IndexError, ValueError):\n",
+    "        pass\n"
    ],
    "metadata": {
     "collapsed": false
@@ -135,29 +132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated 11-th datum, a new OBSERVATION\n",
-      "Generated 12-th datum, a new THEORY\n",
-      "Generated 13-th datum, a new CONDITION\n",
-      "Generated 14-th datum, a new OBSERVATION\n",
-      "Generated 15-th datum, a new THEORY\n",
-      "Generated 16-th datum, a new CONDITION\n",
-      "Generated 17-th datum, a new OBSERVATION\n",
-      "Generated 18-th datum, a new THEORY\n",
-      "Generated 19-th datum, a new CONDITION\n",
-      "Generated 20-th datum, a new OBSERVATION\n"
+      "Generated 27-th datum, a new THEORY\n",
+      "Generated 28-th datum, a new CONDITION\n",
+      "Generated 29-th datum, a new OBSERVATION\n",
+      "Generated 30-th datum, a new THEORY\n",
+      "Generated 31-th datum, a new CONDITION\n",
+      "Generated 32-th datum, a new OBSERVATION\n",
+      "Generated 33-th datum, a new THEORY\n",
+      "Generated 34-th datum, a new CONDITION\n",
+      "Generated 35-th datum, a new OBSERVATION\n",
+      "Generated 36-th datum, a new THEORY\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<autora.cycle.filesystem.FilesystemCycle at 0x17c63e070>"
+      "text/plain": "<autora.cycle.filesystem.FilesystemCycle at 0x13a047d60>"
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "new_cycle.serializer = YAMLResultCollectionSerializer(pathlib.Path(\"./saving_restarting\"))\n",
